# do-otel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  conversation.md  init-sharded-dbs.ts  package.json  plan.md  shard-server.ts  worker-configuration.d.ts  wrangler.jsonc
container_src/: Cargo.toml
container_src/src/: main.rs  sharded_aggregation_rule.rs
scripts/: init-sharded-dbs.ts  shard-server.ts
src/: http_executor.rs  index.ts  main.rs  main.rs.backup  sharded_aggregation_rule.rs  sharded_provider.rs  sqlite_interval.rs
