[package]
name = "sqlotel"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "51.0"
datafusion-sql = "51.0"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
